[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
dynamic = ["version"]
name = "py-bEaNs_lib"
requires-python = ">= 3.6"
description = "A library to encode and decode messages with the power of BEANS"
readme = "README.md"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
keywords = ["beans", "code", "encrypt", "translator", "pybeans"]